ec2_and_minikube/10_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ajktown-ingress
  namespace: ajktown
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: my-app
spec:
  rules:
    - host: testapi.ajktown.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ajktown-api-svc
                port:
                  number: 80
    - host: www.ajktown.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ajktown-api-svc
                port:
                  number: 80
    - host: wordnote.ajktown.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ajktown-wordnote-svc
                port:
                  number: 80
    - host: api.ajktown.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ajktown-api-svc
                port:
                  number: 80
